--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: terrah27.github.io
 description: 
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-hacker
+theme: jekyll-theme-midnight
 
 gems:
   - jekyll-mentions
